--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>ninja</title>
-    
+    <h3>aaaaaa</h3>
   </head>
   <body>
     <noscript>
