--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>ninja</title>
-    
+    <title>GIT</title>
+
   </head>
   <body>
+    <h1></h1>
     <noscript>
       <strong>We're sorry but ninja doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
